Practica4PL/src/tiny1/ast_descendente/ConstructorAST.java
/* Generated By:JavaCC: Do not edit this line. ConstructorAST.java */
package tiny1.ast_descendente;

import tiny1.asint.nodos.bloques.*;
import tiny1.asint.nodos.campos.*;
import tiny1.asint.nodos.declaraciones.*;
import tiny1.asint.nodos.expresiones.*;
import tiny1.asint.nodos.instrucciones.*;
import tiny1.asint.nodos.parametros.*;
import tiny1.asint.nodos.programa.*;
import tiny1.asint.nodos.tipos.*;
import tiny1.semops.SemOps;

public class ConstructorAST implements ConstructorASTConstants {
     private SemOps sem = new SemOps();

  final public Programa ProgramaP() throws ParseException {
      Programa prog;
    prog = Programa();
    jj_consume_token(0);
                            {if (true) return prog;}
    throw new Error("Missing return statement in function");
  }

  final public Programa Programa() throws ParseException {
      Declaraciones decs; Instrucciones inst;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case proc:
    case var:
    case type:
      decs = Declaraciones();
      jj_consume_token(46);
      inst = Instrucciones();
                                                     {if (true) return sem.prog_con_decs(decs,inst);}
      break;
    case numeroEntero:
    case numeroReal:
    case True:
    case False:
    case not:
    case Null:
    case If:
    case While:
    case call:
    case New:
    case delete:
    case read:
    case write:
    case nl:
    case identificador:
    case cadena:
    case 48:
    case 54:
    case 58:
    case 59:
      inst = Instrucciones();
                           {if (true) return sem.prog_sin_decs(inst);}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Declaraciones Declaraciones() throws ParseException {
      Declaracion dec; Declaraciones decs;
    dec = Declaracion();
    decs = REDeclaraciones(sem.decs_una(dec));
                                                                {if (true) return decs;}
    throw new Error("Missing return statement in function");
  }

  final public Declaraciones REDeclaraciones(Declaraciones decsh) throws ParseException {
      Declaracion dec; Declaraciones decs;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      dec = Declaracion();
      decs = REDeclaraciones(sem.decs_muchas(decsh,dec));
                                                                             {if (true) return decs;}
      break;
    default:
      jj_la1[1] = jj_gen;
      {if (true) return decsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Declaracion Declaracion() throws ParseException {
      Tipo tipo; Token t; ListaParams params; Bloque bloque;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case var:
      jj_consume_token(var);
      tipo = Tipo();
      t = jj_consume_token(identificador);
                                          {if (true) return sem.dec_var(tipo,sem.str(t.image,t.beginLine,t.beginColumn));}
      break;
    case type:
      jj_consume_token(type);
      tipo = Tipo();
      t = jj_consume_token(identificador);
                                           {if (true) return sem.dec_type(tipo,sem.str(t.image,t.beginLine,t.beginColumn));}
      break;
    case proc:
      jj_consume_token(proc);
      t = jj_consume_token(identificador);
      params = Params();
      bloque = Bloque();
                                                               {if (true) return sem.dec_proc(sem.str(t.image,t.beginLine,t.beginColumn),params,bloque);}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ListaParams Params() throws ParseException {
      ListaParams lp;
    jj_consume_token(48);
    lp = REParams();
                        {if (true) return lp;}
    throw new Error("Missing return statement in function");
  }

  final public ListaParams REParams() throws ParseException {
      ListaParams lp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Int:
    case bool:
    case real:
    case string:
    case record:
    case array:
    case pointer:
    case identificador:
      lp = ListaParams();
      jj_consume_token(49);
                           {if (true) return lp;}
      break;
    case 49:
      jj_consume_token(49);
          {if (true) return sem.params_sin();}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ListaParams ListaParams() throws ParseException {
      Parametro p; ListaParams lp;
    p = Param();
    lp = REListaParams(sem.lista_params_uno(p));
                                                          {if (true) return lp;}
    throw new Error("Missing return statement in function");
  }

  final public ListaParams REListaParams(ListaParams lph) throws ParseException {
      Parametro p; ListaParams lp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      p = Param();
      lp = REListaParams(sem.lista_params_muchos(lph,p));
                                                                     {if (true) return lp;}
      break;
    default:
      jj_la1[4] = jj_gen;

         {if (true) return lph;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Parametro Param() throws ParseException {
      Tipo tipo; Parametro p;
    tipo = Tipo();
    p = AmpersandOp(tipo);
                                      {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  final public Parametro AmpersandOp(Tipo tipoh) throws ParseException {
      Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 51:
      jj_consume_token(51);
      t = jj_consume_token(identificador);
                            {if (true) return sem.param_ref(tipoh,t.image);}
      break;
    case identificador:
      t = jj_consume_token(identificador);
                        {if (true) return sem.param_valor(tipoh,t.image);}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Tipo Tipo() throws ParseException {
      Token t; Tipo tipo; Campos campos;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Int:
      t = jj_consume_token(Int);
              {if (true) return sem.int_();}
      break;
    case real:
      t = jj_consume_token(real);
               {if (true) return sem.real_();}
      break;
    case bool:
      t = jj_consume_token(bool);
                {if (true) return sem.bool_();}
      break;
    case string:
      t = jj_consume_token(string);
                 {if (true) return sem.string_();}
      break;
    case identificador:
      t = jj_consume_token(identificador);
                        {if (true) return sem.tipo_nuevo(sem.str(t.image,t.beginLine,t.beginColumn));}
      break;
    case array:
      jj_consume_token(array);
      jj_consume_token(52);
      t = jj_consume_token(numeroEntero);
      jj_consume_token(53);
      jj_consume_token(of);
      tipo = Tipo();
                                                     {if (true) return sem.tipo_array(sem.str(t.image,t.beginLine,t.beginColumn),tipo);}
      break;
    case pointer:
      jj_consume_token(pointer);
      tipo = Tipo();
                            {if (true) return sem.tipo_pointer(tipo);}
      break;
    case record:
      jj_consume_token(record);
      jj_consume_token(54);
      campos = Campos();
      jj_consume_token(55);
                                     {if (true) return sem.tipo_record(campos);}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Campos Campos() throws ParseException {
      Campo c; Campos campos;
    c = Campo();
    campos = RECampos(sem.campos_uno(c));
                                                   {if (true) return campos;}
    throw new Error("Missing return statement in function");
  }

  final public Campos RECampos(Campos camposh) throws ParseException {
      Campo c; Campos campos;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      c = Campo();
      campos = RECampos(sem.campos_muchos(camposh,c));
                                                                  {if (true) return campos;}
      break;
    default:
      jj_la1[7] = jj_gen;

         {if (true) return camposh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Campo Campo() throws ParseException {
      Tipo tipo; Token t;
    tipo = Tipo();
    t = jj_consume_token(identificador);
                                    {if (true) return sem.campo(tipo,sem.str(t.image,t.beginLine,t.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Instrucciones Instrucciones() throws ParseException {
      Instruccion inst; Instrucciones instrs;
    inst = Instruccion();
    instrs = REInstrucciones(sem.instr_una(inst));
                                                                     {if (true) return instrs;}
    throw new Error("Missing return statement in function");
  }

  final public Instrucciones REInstrucciones(Instrucciones instrsh) throws ParseException {
      Instruccion inst; Instrucciones instrs;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      inst = Instruccion();
      instrs = REInstrucciones(sem.instr_muchas(instrsh,inst));
                                                                                    {if (true) return instrs;}
      break;
    default:
      jj_la1[8] = jj_gen;

         {if (true) return instrsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public InstruccionesOpt InstruccionesOpt() throws ParseException {
      Instrucciones instrs;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case numeroEntero:
    case numeroReal:
    case True:
    case False:
    case not:
    case Null:
    case If:
    case While:
    case call:
    case New:
    case delete:
    case read:
    case write:
    case nl:
    case identificador:
    case cadena:
    case 48:
    case 54:
    case 58:
    case 59:
      instrs = Instrucciones();
                             {if (true) return sem.instr_opt_muchas(instrs);}
      break;
    default:
      jj_la1[9] = jj_gen;

         {if (true) return sem.instr_opt_ninguna();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Instruccion() throws ParseException {
      Expresion e1,e2; InstruccionesOpt instrsOpt; Instruccion inst; Token t; Expresiones params; Bloque bloque;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case numeroEntero:
    case numeroReal:
    case True:
    case False:
    case not:
    case Null:
    case identificador:
    case cadena:
    case 48:
    case 58:
    case 59:
      e1 = Expresion();
      jj_consume_token(56);
      e2 = Expresion();
                                        {if (true) return sem.instr_asig(e1,e2);}
      break;
    case If:
      jj_consume_token(If);
      e1 = Expresion();
      jj_consume_token(then);
      instrsOpt = InstruccionesOpt();
      inst = REInstruccion(e1,instrsOpt);
                                                                                               {if (true) return inst;}
      break;
    case While:
      jj_consume_token(While);
      e1 = Expresion();
      jj_consume_token(Do);
      instrsOpt = InstruccionesOpt();
      jj_consume_token(endwhile);
                                                                          {if (true) return sem.instr_while(e1,instrsOpt);}
      break;
    case read:
      jj_consume_token(read);
      e1 = Expresion();
                            {if (true) return sem.instr_read(e1);}
      break;
    case write:
      jj_consume_token(write);
      e1 = Expresion();
                             {if (true) return sem.instr_write(e1);}
      break;
    case nl:
      jj_consume_token(nl);
           {if (true) return sem.instr_nl();}
      break;
    case New:
      jj_consume_token(New);
      e1 = Expresion();
                           {if (true) return sem.instr_new(e1);}
      break;
    case delete:
      jj_consume_token(delete);
      e1 = Expresion();
                              {if (true) return sem.instr_delete(e1);}
      break;
    case call:
      jj_consume_token(call);
      t = jj_consume_token(identificador);
      params = ParamReal();
                                                  {if (true) return sem.instr_call(sem.str(t.image,t.beginLine,t.beginColumn),params);}
      break;
    case 54:
      bloque = Bloque();
                      {if (true) return sem.instr_bloque(bloque);}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Instruccion REInstruccion(Expresion eh,InstruccionesOpt instrsOpth) throws ParseException {
      InstruccionesOpt instrsOpt;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Else:
      jj_consume_token(Else);
      instrsOpt = InstruccionesOpt();
      jj_consume_token(endif);
                                                  {if (true) return sem.instr_if_else(eh,instrsOpth,instrsOpt);}
      break;
    case endif:
      jj_consume_token(endif);
              {if (true) return sem.instr_if(eh,instrsOpth);}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expresiones ParamReal() throws ParseException {
      Expresiones params;
    jj_consume_token(48);
    params = REParamsReal();
                                {if (true) return params;}
    throw new Error("Missing return statement in function");
  }

  final public Expresiones REParamsReal() throws ParseException {
      Expresiones e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 49:
      jj_consume_token(49);
          {if (true) return sem.expresiones_ninguna();}
      break;
    case numeroEntero:
    case numeroReal:
    case True:
    case False:
    case not:
    case Null:
    case identificador:
    case cadena:
    case 48:
    case 58:
    case 59:
      e = Expresiones();
      jj_consume_token(49);
                          {if (true) return e;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expresiones Expresiones() throws ParseException {
      Expresion e; Expresiones exprs;
    e = Expresion();
    exprs = REExpresiones(sem.expresiones_una(e));
                                                                {if (true) return exprs;}
    throw new Error("Missing return statement in function");
  }

  final public Expresiones REExpresiones(Expresiones exprh) throws ParseException {
      Expresion e; Expresiones exprs;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      e = Expresion();
      exprs = REExpresiones(sem.expresiones_muchas(exprh,e));
                                                                             {if (true) return exprs;}
      break;
    default:
      jj_la1[13] = jj_gen;

         {if (true) return exprh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Bloque Bloque() throws ParseException {
      Bloque bloque;
    jj_consume_token(54);
    bloque = REBloque();
                            {if (true) return bloque;}
    throw new Error("Missing return statement in function");
  }

  final public Bloque REBloque() throws ParseException {
      Programa p;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 55:
      jj_consume_token(55);
          {if (true) return sem.bloque_vacio();}
      break;
    case numeroEntero:
    case numeroReal:
    case True:
    case False:
    case not:
    case Null:
    case proc:
    case If:
    case While:
    case call:
    case New:
    case delete:
    case read:
    case write:
    case nl:
    case var:
    case type:
    case identificador:
    case cadena:
    case 48:
    case 54:
    case 58:
    case 59:
      p = Programa();
      jj_consume_token(55);
                      {if (true) return sem.bloque_lleno(p);}
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expresion Expresion() throws ParseException {
      Expresion e;
    e = E0();
             {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Expresion ExpresionBasica() throws ParseException {
      Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case numeroEntero:
      t = jj_consume_token(numeroEntero);
                       {if (true) return sem.num_entero(sem.str(t.image,t.beginLine,t.beginColumn));}
      break;
    case numeroReal:
      t = jj_consume_token(numeroReal);
                     {if (true) return sem.num_real(sem.str(t.image,t.beginLine,t.beginColumn));}
      break;
    case identificador:
      t = jj_consume_token(identificador);
                         {if (true) return sem.id(sem.str(t.image,t.beginLine,t.beginColumn));}
      break;
    case True:
      t = jj_consume_token(True);
               {if (true) return sem.true_();}
      break;
    case False:
      t = jj_consume_token(False);
                {if (true) return sem.false_();}
      break;
    case Null:
      t = jj_consume_token(Null);
               {if (true) return sem.nulo();}
      break;
    case cadena:
      t = jj_consume_token(cadena);
                 {if (true) return sem.cadena(sem.str(t.image,t.beginLine,t.beginColumn));}
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expresion E0() throws ParseException {
      Expresion e1,e2;
    e1 = E1();
    e2 = RE0(e1);
                         {if (true) return e2;}
    throw new Error("Missing return statement in function");
  }

  final public Expresion RE0(Expresion eh) throws ParseException {
      Expresion e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
      jj_consume_token(57);
      e = E0();
                 {if (true) return sem.suma(eh,e);}
      break;
    case 58:
      jj_consume_token(58);
      e = E1();
                 {if (true) return sem.resta(eh,e);}
      break;
    default:
      jj_la1[16] = jj_gen;

         {if (true) return eh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Expresion E1() throws ParseException {
      Expresion e1,e2;
    e1 = E2();
    e2 = RE1(e1);
                         {if (true) return e2;}
    throw new Error("Missing return statement in function");
  }

  final public Expresion RE1(Expresion eh) throws ParseException {
      String op; Expresion e1,e2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case or:
    case and:
      op = OP1();
      e1 = E2();
      e2 = RE1(sem.exp(op,eh,e1));
                                                 {if (true) return e2;}
      break;
    default:
      jj_la1[17] = jj_gen;

         {if (true) return eh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Expresion E2() throws ParseException {
      Expresion e1,e2;
    e1 = E3();
    e2 = RE2(e1);
                         {if (true) return e2;}
    throw new Error("Missing return statement in function");
  }

  final public Expresion RE2(Expresion eh) throws ParseException {
      String op; Expresion e1,e2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 60:
    case 61:
    case 62:
    case 63:
    case 64:
    case 65:
      op = OP2();
      e1 = E3();
      e2 = RE2(sem.exp(op,eh,e1));
                                                 {if (true) return e2;}
      break;
    default:
      jj_la1[18] = jj_gen;

         {if (true) return eh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Expresion E3() throws ParseException {
      Expresion e1,e2;
    e1 = E4();
    e2 = RE3(e1);
                         {if (true) return e2;}
    throw new Error("Missing return statement in function");
  }

  final public Expresion RE3(Expresion eh) throws ParseException {
      String op; Expresion e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 59:
    case 66:
    case 67:
      op = OP3();
      e = E4();
                      {if (true) return sem.exp(op,eh,e);}
      break;
    default:
      jj_la1[19] = jj_gen;

         {if (true) return eh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Expresion E4() throws ParseException {
      Expresion e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case not:
      jj_consume_token(not);
      e = E4();
                   {if (true) return sem.not(e);}
      break;
    case 58:
      jj_consume_token(58);
      e = E5();
                 {if (true) return sem.menos(e);}
      break;
    case numeroEntero:
    case numeroReal:
    case True:
    case False:
    case Null:
    case identificador:
    case cadena:
    case 48:
    case 59:
      e = E5();
             {if (true) return e;}
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
